fix: remove justify-content from snackbar for improved alignment

--- a/src/styles/layouts.module.scss
+++ b/src/styles/layouts.module.scss
@@ -1,7 +1,6 @@
 .snackbar {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
 
   &--tight {
